# fun8s-lite

./: Cargo.toml  README.md
files/docker/: files-cmd
files/img/: img.list
files/k8s/: files-cmd
files/mesh/: files-url
src/: error.rs  main.rs  token.rs
src/k8s/: env.rs  mod.rs
src/mesh/: cfg.rs  env.rs  mod.rs
