[package]
name = "fun8s-lite"
version = "0.1.0"
authors = ["moss"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "0.7.8"
ipnetwork = "0.16.0"
base64 = "0.12.3"
clap = "2.33.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.0"
env_logger = "0.7.1"